WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
204752
[LFC][IFC] LineBuilder::InlineItemRun objects don't have vertical geometry
https://bugs.webkit.org/show_bug.cgi?id=204752
Summary
[LFC][IFC] LineBuilder::InlineItemRun objects don't have vertical geometry
alan
Reported
2019-12-02 09:43:20 PST
Height and vertical position are set when the runs are merged and turned into LineBuilder::Runs.
Attachments
Patch
(12.27 KB, patch)
2019-12-02 10:01 PST
,
alan
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-12-02 09:43:41 PST
<
rdar://problem/57560643
>
alan
Comment 2
2019-12-02 10:01:51 PST
Created
attachment 384636
[details]
Patch
alan
Comment 3
2019-12-02 12:10:20 PST
Committed
r253003
: <
https://trac.webkit.org/changeset/253003
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug